# rustclr

./: .gitattributes  .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: Cargo.toml  README.md
examples/Powershell/: Cargo.toml  README.md
examples/Powershell/src/: main.rs
examples/Writeline/: Cargo.toml  README.md
examples/Writeline/src/: main.rs
scripts/: build.py
src/: clr.rs  com.rs  error.rs  lib.rs
src/data/: appdomain.rs  assembly.rs  iclrmetahost.rs  iclrruntimeinfo.rs  icorruntimehost.rs  ienumunknown.rs  itype.rs  methodinfo.rs  mod.rs
src/schema/: appdomain.rs  assembly.rs  iclrmetahost.rs  iclrruntimeinfo.rs  icorruntimehost.rs  ienumunknown.rs  itype.rs  methodinfo.rs
src/utils/: file.rs  mod.rs  safearray.rs
tests/: Cargo.toml  README.md
tests/src/: lib.rs
